[tool:pytest]
addopts = --cov-report term-missing --cov nussl/evaluation --cov nussl/core --cov nussl/datasets --cov nussl/ml/networks --cov nussl/ml/unfold --cov nussl/ml/train --ignore=tests/ignored_tests

[report]
exclude_lines =
    raise NotImplementedError

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md